--- a/Semester Project/.gitignore
+++ b/Semester Project/.gitignore
@@ -1,9 +1,53 @@
-EventManager/target/classes/main/java/eventManager/Worker.class
-jonathan/target/test-classes/jonathan/TaskTest.class
-EventManager/target/classes/main/java/eventManager/Worker.class
-EventManager/target/classes/main/java/eventManager/Task.class
-EventManager/target/classes/eventManager/Event.class
-EventManager/target/classes/eventManager/Event.class
-EventManager/target/classes/eventManager/Event.class
-EventManager/target/classes/eventManager/Date.class
-EventManager/target/classes/eventManager/Task.class
+
+*.class
+
+
+*.log
+*.DS_Store
+
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+#
+# Standard Maven .gitignore
+#
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+#
+# IntelliJ
+#
+*.iml
+*.idea
+.idea/*
+!.idea/runConfigurations/
+
+# Eclipse specific files/directories #
+######################################
+.classpath
+.project
+.settings
+.metadata
+
+#
+# Visual Studio Code
+#
+.settings/
+.classpath
+.project
+.vscode/
+.travis.yml
+.gitattributes
+.editorconfig
+#Utils.*
